fix z-index

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ nav{
     position:fixed;
     width:100%;
     animation:nav-appear 2s ease;
-    z-index:1;
+    z-index:2;
 }
 
 nav ul{
@@ -87,6 +87,7 @@ nav li:active:not(.logo){
     flex-direction:column;
     align-items:center;
     background:var(--black);
+    
 }
 
 #dropdownbar li{
